hphp/hack/test/typecheck/reactive/parse_multiple6.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx, __RxLocal>>
function f(): void {}
